[gd_scene load_steps=5 format=3 uid="uid://cfiwju5g6inha"]

[ext_resource type="Script" uid="uid://ca7mw5m04ig76" path="res://Scenes/Levels/level.gd" id="1_7x7pb"]
[ext_resource type="PackedScene" uid="uid://c2ihtfx2eo66o" path="res://Scenes/Levels/map.tscn" id="1_f1n8c"]
[ext_resource type="PackedScene" uid="uid://cbvi42f4ocb4c" path="res://Scenes/Character/player.tscn" id="3_yjxcc"]
[ext_resource type="PackedScene" uid="uid://vl43nmp7kjx7" path="res://Scenes/Levels/ui.tscn" id="4_lkqqh"]

[node name="level" type="Node2D"]
script = ExtResource("1_7x7pb")

[node name="map" parent="." instance=ExtResource("1_f1n8c")]
z_index = -10
metadata/_edit_lock_ = true

[node name="environment" type="Node2D" parent="."]
y_sort_enabled = true

[node name="soil" type="Node2D" parent="environment"]
y_sort_enabled = true

[node name="ysorted" type="Node2D" parent="."]
y_sort_enabled = true

[node name="trees" type="Node2D" parent="ysorted"]
y_sort_enabled = true

[node name="crop" type="Node2D" parent="ysorted"]
y_sort_enabled = true

[node name="player" parent="ysorted" instance=ExtResource("3_yjxcc")]
position = Vector2(-148, -69)

[node name="UI" parent="." instance=ExtResource("4_lkqqh")]

[node name="items" type="Node2D" parent="."]

[node name="HourTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="player_performed_action" from="ysorted/player" to="." method="_on_player_player_performed_action"]
[connection signal="timeout" from="HourTimer" to="." method="_on_hour_timer_timeout"]
